# inmoov_ros

./: README.md
inmoov_base/: CMakeLists.txt  package.xml
inmoov_bringup/: CMakeLists.txt  package.xml
inmoov_common/: CMakeLists.txt  package.xml
inmoov_control/: CMakeLists.txt  package.xml
inmoov_control/config/: control.yaml
inmoov_control/launch/: control.launch
inmoov_description/: CMakeLists.txt  package.xml
inmoov_description/launch/: description.launch
inmoov_description/urdf/: arm.urdf.xacro  config.inertial.urdf.xacro  hand.urdf.xacro  inmoov.urdf  inmoov.urdf.xacro  materials.urdf.xacro  torso.urdf.xacro
inmoov_desktop/: CMakeLists.txt  package.xml
inmoov_gazebo/: CMakeLists.txt  package.xml
inmoov_gazebo/launch/: inmoov_empty_world.launch  spawn_inmoov.launch
inmoov_moveit_config/: .setup_assistant  package.xml
inmoov_moveit_config/config/: fake_controllers.yaml  inmoov.srdf  joint_limits.yaml  ompl_planning.yaml
inmoov_moveit_config/launch/: demo.launch  moveit.rviz  planning_context.launch
inmoov_robot/: CMakeLists.txt  package.xml
inmoov_simulation/: CMakeLists.txt  package.xml
inmoov_speech_recognizer/: CMakeLists.txt  package.xml
inmoov_speech_recognizer/cmake/: FindSphinxBase.cmake
inmoov_speech_recognizer/launch/: speech_recognizer.launch
inmoov_speech_recognizer/src/: recognizer.cpp
inmoov_viz/: CMakeLists.txt  package.xml
inmoov_viz/launch/: view_model.launch  view_robot.launch
inmoov_viz/rviz/: model.rviz
inmoov_voice/: CMakeLists.txt  package.xml
