<?xml version="1.0"?>
<package>
  <name>inmoov_common</name>
  <version>0.1.0</version>
  <description>The inmoov_common package</description>
  
  <maintainer email="randy.deborggraeve@gmail.com">Randy Deborggraeve</maintainer>

  <license>GPLv3</license>

  <url type="website">http://wiki.ros.org/inmoov_common</url>
  <url type="repository">https://github.com/DeborggraeveR/inmoov_ros</url>
  <url type="bugtracker">https://github.com/DeborggraeveR/inmoov_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>inmoov_description</run_depend>
  <run_depend>inmoov_control</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
