<?xml version="1.0"?>
<package>
  <name>inmoov_description</name>
  <version>0.1.0</version>
  <description>The inmoov_description package</description>
  
  <maintainer email="randy.deborggraeve@gmail.com">Randy Deborggraeve</maintainer>

  <license>GPLv3</license>

  <url type="website">http://wiki.ros.org/inmoov_description</url>
  <url type="repository">https://github.com/DeborggraeveR/inmoov_ros</url>
  <url type="bugtracker">https://github.com/DeborggraeveR/inmoov_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roslaunch</run_depend>

  <export/>
</package>
